--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,11 +5,11 @@ on:
     branches: [ main ]
 
 env:
-  PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
+  GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
   GKE_CLUSTER: secure-microservice
   GKE_REGION: us-central1
   DNS_NAME: microservice.example.com
-  TF_STATE_BUCKET: ${{ secrets.TF_STATE_BUCKET }}
+  GCS_BUCKET_NAME: ${{ secrets.GCS_BUCKET_NAME }}
   GCP_REGION: us-central1
   GCP_ZONE: us-central1-a
 
@@ -26,7 +26,7 @@ jobs:
       id: 'auth'
       uses: 'google-github-actions/auth@v1'
       with:
-        credentials_json: '${{ secrets.GCP_SA_KEY }}'
+        credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
 
     - name: Set up gcloud
       uses: google-github-actions/setup-gcloud@v1
