--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Terraform Deploy to GCP
+name: Terraform GKE Deployment
 
 on:
   push:
@@ -6,46 +6,42 @@ on:
       - main
   workflow_dispatch:
 
+permissions:
+  contents: read
+  id-token: write
+
 jobs:
-  deploy:
+  terraform:
     name: Terraform Init/Plan/Apply
     runs-on: ubuntu-latest
 
-    env:
-      PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
-      REGION: ${{ secrets.GCP_REGION }}
-      ZONE: ${{ secrets.GCP_ZONE }}
-      BUCKET_NAME: ${{ secrets.GCS_BUCKET_NAME }}
-
     steps:
-      - name: Checkout Repo
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      # Authenticate to Google Cloud
-      - name: Authenticate to GCP
-        uses: google-github-actions/auth@v1
+      - name: Set up Terraform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: 1.7.5  # or your preferred version
+
+      - name: Authenticate to Google Cloud
+        uses: google-github-actions/auth@v2
         with:
           credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
 
-      # Setup gcloud CLI (optional but useful)
-      - name: Setup gcloud CLI
-        uses: google-github-actions/setup-gcloud@v1
-        with:
-          project_id: ${{ secrets.GCP_PROJECT_ID }}
-          install_components: 'beta'
-
-      # Terraform Setup
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v2
-        with:
-          terraform_version: 1.6.6
+      - name: Set up gcloud SDK
+        uses: google-github-actions/setup-gcloud@v2
 
       - name: Terraform Init
+        working-directory: terraform
         run: terraform init
 
       - name: Terraform Plan
+        working-directory: terraform
         run: terraform plan
 
       - name: Terraform Apply
+        if: github.ref == 'refs/heads/main'
+        working-directory: terraform
         run: terraform apply -auto-approve
 
