--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v2
         with:
-          terraform_version: 1.7.5  # or your preferred version
+          terraform_version: 1.7.5
 
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v2
@@ -32,9 +32,19 @@ jobs:
       - name: Set up gcloud SDK
         uses: google-github-actions/setup-gcloud@v2
 
+      - name: Create backend.tf dynamically (GCS remote state)
+        working-directory: terraform
+        run: |
+          echo 'terraform {' > backend.tf
+          echo '  backend "gcs" {' >> backend.tf
+          echo '    bucket = "${{ secrets.GCS_BUCKET_NAME }}"' >> backend.tf
+          echo '    prefix = "terraform/state"' >> backend.tf
+          echo '  }' >> backend.tf
+          echo '}' >> backend.tf
+
       - name: Terraform Init
         working-directory: terraform
-        run: terraform init
+        run: terraform init -backend-config="bucket=${{ secrets.GCS_BUCKET_NAME }}" -backend-config="prefix=terraform/state"
 
       - name: Terraform Plan
         working-directory: terraform
@@ -44,4 +54,3 @@ jobs:
         if: github.ref == 'refs/heads/main'
         working-directory: terraform
         run: terraform apply -auto-approve
-
