--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,12 @@ jobs:
 
       - name: Terraform Plan
         working-directory: terraform
-        run: terraform plan
+        run: terraform plan \
+         -var="project_id=${{ secrets.GCP_PROJECT_ID }}" \
+         -var="region=${{ secrets.GCP_REGION }}" \
+         -var="zone=${{ secrets.GCP_ZONE }}" \
+         -var="gcs_bucket_name=${{ secrets.GCS_BUCKET_NAME }}"
+
 
       - name: Terraform Apply
         if: github.ref == 'refs/heads/main'
