--- a/.github/workflows/gke_manifest.yml
+++ b/.github/workflows/gke_manifest.yml
@@ -33,6 +33,12 @@ jobs:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
           export_default_credentials: true
 
+      # ✅ Install GKE Auth Plugin (Fixes 403 error in kubectl)
+      - name: Install gke-gcloud-auth-plugin
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y google-cloud-sdk-gke-gcloud-auth-plugin
+
       # ✅ Get GKE kubeconfig using --region
       - name: Get GKE credentials
         run: |
@@ -62,3 +68,4 @@ jobs:
             fi
             sleep 10
           done
+
