--- a/.github/workflows/gke_manifest.yml
+++ b/.github/workflows/gke_manifest.yml
@@ -34,10 +34,12 @@ jobs:
           export_default_credentials: true
 
       # ✅ Install GKE Auth Plugin (Fixes 403 error in kubectl)
-      - name: Install gke-gcloud-auth-plugin
+      - name: Install Google Cloud SDK (with GKE Auth Plugin)
         run: |
-          sudo apt-get update
-          sudo apt-get install -y google-cloud-sdk-gke-gcloud-auth-plugin
+           echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] http://packages.cloud.google.com/apt cloud-sdk main" | sudo tee -a /etc/apt/sources.list.d/google-cloud-sdk.list
+           curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key add -
+           sudo apt-get update && sudo apt-get install google-cloud-sdk
+
 
       # ✅ Get GKE kubeconfig using --region
       - name: Get GKE credentials
