--- a/.github/workflows/gke_manifest.yml
+++ b/.github/workflows/gke_manifest.yml
@@ -26,23 +26,14 @@ jobs:
         with:
           credentials_json: '${{ secrets.GCP_SA_KEY }}'
 
-      # ✅ Set up gcloud with project ID and GKE plugin
-      - name: Set up Google Cloud SDK
+      # ✅ Set up Google Cloud CLI
+      - name: Set up Google Cloud CLI
         uses: google-github-actions/setup-gcloud@v1
         with:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
+          install_components: 'gke-gcloud-auth-plugin'
           export_default_credentials: true
 
-      # ✅ Install Cloud SDK (with secure GPG keyring)
-      - name: Install Google Cloud SDK manually (for gke-gcloud-auth-plugin)
-        run: |
-          sudo apt-get update && sudo apt-get install -y apt-transport-https ca-certificates gnupg curl
-          echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main" \
-          | sudo tee /etc/apt/sources.list.d/google-cloud-sdk.list
-          curl -fsSL https://packages.cloud.google.com/apt/doc/apt-key.gpg | \
-          gpg --dearmor | sudo tee /usr/share/keyrings/cloud.google.gpg > /dev/null
-          sudo apt-get update && sudo apt-get install -y google-cloud-sdk gke-gcloud-auth-plugin
-     
       # ✅ Get GKE credentials
       - name: Get GKE credentials
         run: |
@@ -50,8 +41,17 @@ jobs:
             --region ${{ secrets.GCP_REGION }} \
             --project ${{ secrets.GCP_PROJECT_ID }}
 
+      # ✅ Install kubectl
+      - name: Install kubectl
+        uses: azure/setup-kubectl@v4
+        with:
+          version: 'latest'
+
+      # ✅ Install Helm
       - name: Install Helm
         uses: azure/setup-helm@v3
+        with:
+          version: 'latest'
 
       # ✅ Deploy Helm chart
       - name: Deploy via Helm
@@ -59,7 +59,7 @@ jobs:
           helm upgrade --install $HELM_RELEASE_NAME $HELM_CHART_DIR \
             --namespace default --create-namespace
 
-      # ✅ Print Ingress IP
+      # ✅ Get Ingress IP
       - name: Get Ingress IP
         run: |
           echo "Waiting for Ingress IP..."
@@ -68,9 +68,9 @@ jobs:
             if [[ -n "$IP" ]]; then
               echo "✅ App is available at:"
               echo "http://$IP or http://$IP.nip.io"
-              break
+              exit 0
             fi
             sleep 10
           done
-
-
+          echo "❌ Ingress IP not found after timeout."
+          exit 1
