--- a/helm/microservice/values.yaml
+++ b/helm/microservice/values.yaml
@@ -1,9 +1,9 @@
-replicaCount: 1
+replicaCount: 2
 
 image:
   repository: nginx
+  tag: latest
   pullPolicy: IfNotPresent
-  tag: "1.16.0"
 
 service:
   type: ClusterIP
@@ -11,24 +11,14 @@ service:
 
 ingress:
   enabled: true
-  className: "gce"
+  className: "nginx"
   annotations:
-    kubernetes.io/ingress.global-static-ip-name: "microservice-ip"
-    networking.gke.io/managed-certificates: "microservice-cert"
+    kubernetes.io/ingress.class: nginx
   hosts:
-    - host: example.com
+    - host: microservice.example.com
       paths:
         - path: /
-          pathType: Prefix
-  tls: []
+          pathType: ImplementationSpecific
+  tls: []  # Add TLS secrets here if using HTTPS
 
-resources:
-  limits:
-    cpu: 100m
-    memory: 128Mi
-  requests:
-    cpu: 100m
-    memory: 128Mi
-
-autoscaling:
-  enabled: false
+resources: {}
