--- a/helm/microservice/templates/service.yaml
+++ b/helm/microservice/templates/service.yaml
@@ -4,10 +4,9 @@ metadata:
   name: {{ .Release.Name }}-service
 spec:
   type: {{ .Values.service.type }}
-  ports:
-    - port: {{ .Values.service.port }}
-      targetPort: 80
-      protocol: TCP
-      name: http
   selector:
     app: {{ .Release.Name }}
+  ports:
+    - protocol: TCP
+      port: {{ .Values.service.port }}
+      targetPort: 80
