--- a/.github/workflows/gke_manifest.yml
+++ b/.github/workflows/gke_manifest.yml
@@ -9,15 +9,15 @@ on:
 
 jobs:
   deploy:
-    name: Deploy Helm Chart
+    name: Deploy Helm Chart to GKE
     runs-on: ubuntu-latest
 
     env:
       HELM_RELEASE_NAME: microservice
-      HELM_CHART_DIR: ./helm/microservice
+      HELM_CHART_DIR: helm/microservice
 
     steps:
-      - name: Checkout Code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       # ✅ Authenticate to Google Cloud
@@ -26,15 +26,15 @@ jobs:
         with:
           credentials_json: '${{ secrets.GCP_SA_KEY }}'
 
-      # ✅ Set up Google Cloud CLI
-      - name: Set up Google Cloud CLI
+      # ✅ Set up Google Cloud SDK
+      - name: Set up Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v1
         with:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
-          install_components: 'gke-gcloud-auth-plugin'
+          install_components: gke-gcloud-auth-plugin
           export_default_credentials: true
 
-      # ✅ Get GKE credentials
+      # ✅ Configure kubectl to access GKE
       - name: Get GKE credentials
         run: |
           gcloud container clusters get-credentials ${{ secrets.GKE_CLUSTER_NAME }} \
@@ -45,32 +45,32 @@ jobs:
       - name: Install kubectl
         uses: azure/setup-kubectl@v4
         with:
-          version: 'latest'
+          version: latest
 
       # ✅ Install Helm
       - name: Install Helm
         uses: azure/setup-helm@v3
         with:
-          version: 'latest'
+          version: latest
 
-      # ✅ Deploy Helm chart
-      - name: Deploy via Helm
+      # ✅ Deploy using Helm
+      - name: Helm Upgrade or Install
         run: |
           helm upgrade --install $HELM_RELEASE_NAME $HELM_CHART_DIR \
             --namespace default --create-namespace
 
-      # ✅ Get Ingress IP
-      - name: Get Ingress IP
+      # ✅ Wait and Print Ingress IP
+      - name: Wait for Ingress IP
         run: |
           echo "Waiting for Ingress IP..."
           for i in {1..20}; do
             IP=$(kubectl get ingress $HELM_RELEASE_NAME -n default -o jsonpath="{.status.loadBalancer.ingress[0].ip}")
             if [[ -n "$IP" ]]; then
-              echo "✅ App is available at:"
+              echo "✅ App is accessible at:"
               echo "http://$IP or http://$IP.nip.io"
               exit 0
             fi
             sleep 10
           done
-          echo "❌ Ingress IP not found after timeout."
+          echo "❌ Ingress IP not available after waiting."
           exit 1
