--- a/.github/workflows/gke_manifest.yml
+++ b/.github/workflows/gke_manifest.yml
@@ -9,68 +9,71 @@ on:
 
 jobs:
   deploy:
-    name: Deploy Helm Chart to GKE
+    name: Deploy Helm Chart
     runs-on: ubuntu-latest
 
     env:
       HELM_RELEASE_NAME: microservice
-      HELM_CHART_DIR: helm/microservice
+      HELM_CHART_DIR: ./helm/microservice
 
     steps:
-      - name: Checkout repository
+      - name: Checkout Code
         uses: actions/checkout@v4
 
-      # ✅ Authenticate to Google Cloud
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v1
         with:
           credentials_json: '${{ secrets.GCP_SA_KEY }}'
 
-      # ✅ Set up Google Cloud SDK
       - name: Set up Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v1
         with:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
-          install_components: gke-gcloud-auth-plugin
+          install_components: 'gke-gcloud-auth-plugin'
           export_default_credentials: true
 
-      # ✅ Configure kubectl to access GKE
       - name: Get GKE credentials
         run: |
           gcloud container clusters get-credentials ${{ secrets.GKE_CLUSTER_NAME }} \
             --region ${{ secrets.GCP_REGION }} \
             --project ${{ secrets.GCP_PROJECT_ID }}
 
-      # ✅ Install kubectl
       - name: Install kubectl
         uses: azure/setup-kubectl@v4
         with:
-          version: latest
+          version: 'latest'
 
-      # ✅ Install Helm
       - name: Install Helm
         uses: azure/setup-helm@v3
         with:
-          version: latest
+          version: 'latest'
 
-      # ✅ Deploy using Helm
-      - name: Helm Upgrade or Install
+      - name: Check Helm Chart
+        run: |
+          if [ ! -f "$HELM_CHART_DIR/Chart.yaml" ]; then
+            echo "❌ Chart.yaml not found in $HELM_CHART_DIR"
+            exit 1
+          fi
+
+      - name: Deploy via Helm
         run: |
           helm upgrade --install $HELM_RELEASE_NAME $HELM_CHART_DIR \
             --namespace default --create-namespace
 
-      # ✅ Wait and Print Ingress IP
-      - name: Wait for Ingress IP
+      - name: Wait and Get Ingress IP
         run: |
           echo "Waiting for Ingress IP..."
           for i in {1..20}; do
             IP=$(kubectl get ingress $HELM_RELEASE_NAME -n default -o jsonpath="{.status.loadBalancer.ingress[0].ip}")
             if [[ -n "$IP" ]]; then
-              echo "✅ App is accessible at:"
+              echo "✅ App is available at:"
               echo "http://$IP or http://$IP.nip.io"
               exit 0
             fi
+            echo "Waiting ($i)..."
             sleep 10
           done
           echo "❌ Ingress IP not available after waiting."
+          kubectl describe ingress $HELM_RELEASE_NAME -n default || true
           exit 1
+
