--- a/.github/workflows/gke_manifest.yml
+++ b/.github/workflows/gke_manifest.yml
@@ -20,47 +20,47 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4
 
+      # ✅ Authenticate to Google Cloud
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v1
         with:
           credentials_json: '${{ secrets.GCP_SA_KEY }}'
 
-      - name: Set up Google Cloud SDK
+      # ✅ Set up Google Cloud CLI
+      - name: Set up Google Cloud CLI
         uses: google-github-actions/setup-gcloud@v1
         with:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
           install_components: 'gke-gcloud-auth-plugin'
           export_default_credentials: true
 
+      # ✅ Get GKE credentials
       - name: Get GKE credentials
         run: |
           gcloud container clusters get-credentials ${{ secrets.GKE_CLUSTER_NAME }} \
             --region ${{ secrets.GCP_REGION }} \
             --project ${{ secrets.GCP_PROJECT_ID }}
 
+      # ✅ Install kubectl
       - name: Install kubectl
         uses: azure/setup-kubectl@v4
         with:
           version: 'latest'
 
+      # ✅ Install Helm
       - name: Install Helm
         uses: azure/setup-helm@v3
         with:
           version: 'latest'
 
-      - name: Check Helm Chart
-        run: |
-          if [ ! -f "$HELM_CHART_DIR/Chart.yaml" ]; then
-            echo "❌ Chart.yaml not found in $HELM_CHART_DIR"
-            exit 1
-          fi
-
+      # ✅ Deploy Helm chart
       - name: Deploy via Helm
         run: |
           helm upgrade --install $HELM_RELEASE_NAME $HELM_CHART_DIR \
             --namespace default --create-namespace
 
-      - name: Wait and Get Ingress IP
+      # ✅ Get Ingress IP
+      - name: Get Ingress IP
         run: |
           echo "Waiting for Ingress IP..."
           for i in {1..20}; do
@@ -70,10 +70,8 @@ jobs:
               echo "http://$IP or http://$IP.nip.io"
               exit 0
             fi
-            echo "Waiting ($i)..."
             sleep 10
           done
-          echo "❌ Ingress IP not available after waiting."
-          kubectl describe ingress $HELM_RELEASE_NAME -n default || true
+          echo "❌ Ingress IP not found after timeout."
           exit 1
 
