--- a/.github/workflows/gke_manifest.yml
+++ b/.github/workflows/gke_manifest.yml
@@ -14,7 +14,7 @@ jobs:
 
     env:
       HELM_RELEASE_NAME: microservice
-      HELM_CHART_DIR: ./helm/microservice
+      HELM_CHART_DIR: /helm/microservice
 
     steps:
       - name: Checkout Code
